gcc/testsuite/rust/rustc/ui/parser/issues/issue-89574_dg.rs
fn main() {
    const EMPTY_ARRAY = [];
// { dg-error ".E0282." "" { target *-*-* } .-1 }
// { dg-error ".E0282." "" { target *-*-* } .-2 }
// { dg-error ".E0282." "" { target *-*-* } .-3 }
}

